FIX largeur changeante si scrollbar est presente ou non

--- a/src/index.css
+++ b/src/index.css
@@ -2,17 +2,8 @@
 
 html,
 body {
-  height: 100%;
-  /* position: relative; */
-}
-
-#root {
-  --rouge-mjl: #990303;
-
-  /* height: 100%; */
-  display: flex;
-  flex-direction: column;
-  /* overflow-y: scroll; */
+  height: 100vh;
+  width: 100vw; /* avoids screen resize for existence of scrollbar */
 }
 
 body {
@@ -24,6 +15,15 @@ body {
   background: radial-gradient(circle, #303030 0%, #252525 60%, #1b1917 100%);
   background-repeat: no-repeat;
   background-attachment: fixed;
+}
+
+#root {
+  --rouge-mjl: #990303;
+
+  height: 100vh; /* needed to keep footer at bottom*/
+  display: flex;
+  flex-direction: column;
+  /* overflow-y: scroll; */
 }
 
 #main {
